@@ -1,5 +1,6 @@
 
 - fixed the Preferences menu entry in catalogs manager
+- fixed to handle file references with Windows paths on Unix
 
 
 Version 1.3.6
